--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.3",
     "bootstrap": "^5.2.3",
     "gatsby": "^5.5.0",
     "gatsby-plugin-sass": "^6.5.0",
