--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "gatsby": "^5.5.0",
     "gatsby-plugin-sass": "^6.5.0",
