--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "gatsby": "^5.5.0",
+    "gatsby-plugin-google-gtag": "^5.8.0",
     "gatsby-plugin-sass": "^6.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
