--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "gatsby": "^5.5.0",
+    "gatsby-plugin-google-gtag": "^5.8.0",
+    "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-sass": "^6.5.0",
+    "gatsby-plugin-sharp": "^5.8.1",
+    "gatsby-source-filesystem": "^5.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
