--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "start-offline": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
